// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconDislike /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDislike /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDislike /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDislike /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconDislike /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconDislike /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconDislike /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconDislike /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconDislike /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconDislike /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconDislike /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconDislike /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M184 72h48v113h-48V72zM42.9 184H85c0 .1-.1.1-.1.2-9.6 18.5-11.7 27.5-11.4 42.8.4 15 14.3 28 25 28 8.8 0 12.9-8.9 14.8-13.8 5.9-14.9 9.5-28.6 30-56 .6-.8 1.6-1.3 2.6-1.3 11.6 0 21-9.4 21-21V92c0-11.6-9.4-21-21-21H72c-9.8 0-12.9 6.6-17.8 17.8 0 0-25.9 55.7-29.6 76.1-1.7 9.6 8.4 19.1 18.3 19.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconDislike /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
